# RNAnorm

./: FileOperate.cpp  FileOperate.h  README.md  RNAnorm  RNAnorm.cpp  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  makefile  makefile.am  makefile.in
example/: counts.txt
